--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,4 +41,4 @@ jobs:
           file: dockerfiles/Dockerfile.ubuntu
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ env.tag }}
+          tags: ghcr.io/globalise-huygens/skosmos:${{ env.tag }}
